[gd_scene load_steps=3 format=3 uid="uid://save_slot_button_scene"]

[ext_resource type="Script" path="res://src/ui/components/save_slot_button/save_slot_button.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://hypwi2d6bj7t" path="res://assets/fonts/font_main_bold.ttf" id="2_font"]

[node name="SaveSlotButton" type="Control"]
custom_minimum_size = Vector2(600, 100)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_script")

[node name="SlotLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 30.0
offset_top = -25.0
offset_right = 200.0
offset_bottom = 25.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "SLOT 1"

[node name="InfoLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -20.0
offset_right = -30.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "EMPTY"
horizontal_alignment = 2
